alignment fix

--- a/ui/src/app/layout/user-menu.scss
+++ b/ui/src/app/layout/user-menu.scss
@@ -15,7 +15,7 @@
  */
 
 div.tb-user-info {
-  line-height: 1.5;
+  line-height: 3;
   span {
     text-transform: none;
     text-align: left;
